<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class Board extends Model
{
    use HasFactory;

    public function user()
    {
        return $this->belongsTo(User::class);
    }

    public function images()
    {
        return $this->hasMany(Image::class);
    }

    protected $fillable = [
        'id',
        'boards_name',
        'user_id',
        'tpl_id',
        'edited_html',
        'board_thumbnail',
        'updated_at'
    ];
}
