<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class Template extends Model
{
  use HasFactory;

  protected $fillable = [
    'id',
    'tpl_name',
    'html',
    'thumbnail',
    'updated_at'
  ];
}
